force-app/main/default/objects/Session__c/fields/Attendance_Update__c.field-meta.xml
<CustomField>
    <fullName>Attendance_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Attendance Update</label>
    <type>Checkbox</type>
</CustomField>