force-app/main/default/objects/Session__c/fields/Class_Term__c.field-meta.xml
<CustomField>
    <fullName>Class_Term__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Class Term associated with this Session.</description>
    <inlineHelpText>Class Term associated with this Session.</inlineHelpText>
    <label>Class Term</label>
    <referenceTo>Class_Term__c</referenceTo>
    <relationshipLabel>Sessions</relationshipLabel>
    <relationshipName>Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>