force-app/main/default/objects/Session__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <description>Duration of the Session. The value in this field will depend on Duration Unit field. A value of 2 in this field will mean 2 Hours, if &apos;Hours&apos; is selected in Duration Unit field.</description>
    <inlineHelpText>Duration of the Session. The value in this field will depend on Duration Unit field. A value of 2 in this field will mean 2 Hours, if &apos;Hours&apos; is selected in Duration Unit field.</inlineHelpText>
    <label>Duration</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>