force-app/main/default/objects/Session__c/fields/Duration_Unit__c.field-meta.xml
<CustomField>
    <fullName>Duration_Unit__c</fullName>
    <description>Duration Unit will define the measure of the value in Duration field. If Hours is selected, the value of 2 in Duration field will mean the Session is for 2 Hours. If Minutes is selected, the value of 45 in Duration field will mean the Session is for 45 Minutes.</description>
    <inlineHelpText>Used for defining duration for a Session. If Hours is selected, a value of 2 in Duration field will mean the Session is for 2 Hours. If Minutes is selected, a value of 45 in Duration field will mean the Session is for 45 Minutes.</inlineHelpText>
    <label>Duration Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Duration_Unit</valueSetName>
    </valueSet>
</CustomField>