force-app/main/default/objects/Session__c/fields/End_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Time__c</fullName>
    <formula>Start_Time__c + (VALUE(TEXT(Duration_in_Minutes__c))*60000)
/*educato__Start_Time__c + (educato__Duration__c*60000)*/
/*IF( ISPICKVAL(educato__Duration_Unit__c, &apos;Minutes&apos;) , educato__Start_Time__c + (educato__Duration__c*60000) , educato__Start_Time__c+ (educato__Duration__c*3600000))*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End Time</label>
    <type>Time</type>
</CustomField>