force-app/main/default/objects/Session__c/fields/Event_Color__c.field-meta.xml
<CustomField>
    <fullName>Event_Color__c</fullName>
    <description>This field is use for to identify the color of session based on conditions</description>
    <formula>TEXT(Class__r.Session_Color__c)
/*&apos;#3788d8&apos;*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Color</label>
    <type>Text</type>
</CustomField>