force-app/main/default/objects/Session__c/fields/Event_Text_Color__c.field-meta.xml
<CustomField>
    <fullName>Event_Text_Color__c</fullName>
    <formula>&apos;#fff&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Text Color</label>
    <type>Text</type>
</CustomField>