force-app/main/default/objects/Session__c/fields/Lesson__c.field-meta.xml
<CustomField>
    <fullName>Lesson__c</fullName>
    <description>Need to be deleted</description>
    <formula>Module_Lesson__r.Lesson__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lesson</label>
    <type>Text</type>
</CustomField>