force-app/main/default/objects/Session__c/fields/Module__c.field-meta.xml
<CustomField>
    <fullName>Module__c</fullName>
    <description>Need to be deleted</description>
    <formula>Module_Lesson__r.Module__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Module of a session.</inlineHelpText>
    <label>Module</label>
    <type>Text</type>
</CustomField>