force-app/main/default/objects/Session__c/fields/Module_Lesson__c.field-meta.xml
<CustomField>
    <fullName>Module_Lesson__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Need to be deleted</description>
    <inlineHelpText>Tracks all lessons included in a module.</inlineHelpText>
    <label>Module Lesson</label>
    <referenceTo>Module_Lesson__c</referenceTo>
    <relationshipLabel>Sessions</relationshipLabel>
    <relationshipName>Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>