force-app/main/default/objects/Session__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>This field is use for to showing the notes regarding the sessions</description>
    <label>Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>