force-app/main/default/objects/Session__c/fields/Session_Date__c.field-meta.xml
<CustomField>
    <fullName>Session_Date__c</fullName>
    <description>Date on which the Session will occur.</description>
    <inlineHelpText>Date on which the Session will occur.</inlineHelpText>
    <label>Session Date</label>
    <type>Date</type>
</CustomField>