force-app/main/default/objects/Session__c/fields/Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Time__c</fullName>
    <description>Start Time of the Session.</description>
    <inlineHelpText>Start Time of the Session. The End Time of the Session will be updated based on Duration Unit and Duration.</inlineHelpText>
    <label>Start Time</label>
    <type>Time</type>
</CustomField>