force-app/main/default/objects/Session__c/validationRules/Common_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Common_Validation</fullName>
    <active>true</active>
    <description>Validation on duration and sequence.</description>
    <errorConditionFormula>Sequence__c &lt;=0</errorConditionFormula>
    <errorMessage>Please input valid information in Sequence to proceed.</errorMessage>
</ValidationRule>