force-app/main/default/objects/Session__c/listViews/All_Scheduled_Sessions.listView-meta.xml
<ListView>
    <fullName>All_Scheduled_Sessions</fullName>
    <columns>NAME</columns>
    <columns>Class__c</columns>
    <columns>Class_Term__c</columns>
    <columns>Teacher__c</columns>
    <columns>Start_Time__c</columns>
    <columns>End_Time__c</columns>
    <columns>Status__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Scheduled</value>
    </filters>
    <label>All Scheduled Sessions</label>
</ListView>